crates/python_parser/tests/snapshots/invalid_syntax@for_stmt_missing_iter.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/for_stmt_missing_iter.py
---
## AST

```
Module(
    ModModule {
        range: 0..20,
        body: [
            For(
                ForStmt {
                    range: 0..19,
                    is_async: false,
                    target: Name(
                        NameExpr {
                            range: 4..5,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 8..8,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Assign(
                            AssignStmt {
                                range: 14..19,
                                targets: [
                                    Name(
                                        NameExpr {
                                            range: 14..15,
                                            id: Name("a"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 18..19,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | for x in:
  |         ^ Syntax Error: Expected an expression
2 |     a = 1
  |
