crates/python_parser/tests/snapshots/invalid_syntax@function_def_missing_return_type.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/function_def_missing_return_type.py
---
## AST

```
Module(
    ModModule {
        range: 0..19,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..18,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 15..18,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 15..18,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo() -> : ...
  |              ^ Syntax Error: Expected an expression
  |
